fixed featurette z-index

--- a/app/assets/stylesheets/resources/objects.scss
+++ b/app/assets/stylesheets/resources/objects.scss
@@ -96,7 +96,7 @@
   -webkit-box-shadow: 0 7px 13px 1px $featurette-shadow-light;
   box-shadow: 0 7px 13px 1px $featurette-shadow-light;
   min-height: 340px;
-  z-index: 10000;
+  z-index: 1000;
 }
 /* Top border */
 .featurette:before,
